# kokkos-cobyla

./: .gitignore  CMakeLists.txt  README.md  kokkos_cobyla.hpp  kokkos_cobyla_impl.hpp
test/: CMakeLists.txt  unit_tests.cpp
